--- a/SCMC/Web.config
+++ b/SCMC/Web.config
@@ -25,10 +25,17 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
-  <system.web>
+  <!--<system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-  </system.web>
+  </system.web>-->
+  <system.web>
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>     
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />   
+      </assemblies>
+    </compilation>
+    </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
